pandoc-tablenos 1.3.0 (unreleased)

    * Require pandoc-xnos>=1.0.0,<2 to ensure API compatibility
      (pandoc-fignos Issue #46).


pandoc-tablenos 1.2.0 (2018-01-14)

    * Added `tablenos-capitalise` meta variable.


pandoc-tablenos 1.1.0 (2018-01-13)

    * Updated to use pandoc-xnos 0.15


pandoc-tablenos 1.0.0 (2018-01-07)

    * Version number bumped to 1.0.0.
    * Put span around html caption label (e.g., "Table 1") to
      allow styling.


pandoc-tablenos 1.0.0rc3 (2017-12-16)

    * Removed dependency on pandoc-attributes
      (pandoc-fignos Issue #42).


pandoc-tablenos 1.0.0rc1 (2017-11-18)

    * Release candidate updated for pandoc 2.0.


pandoc-tablenos 0.17.1 (2017-09-19)

    * Fixes for beamer (pandoc-fignos Issue #38).


pandoc-tablenos 0.16.1 (2017-09-12)

    * Documentation updates.


pandoc-tablenos 0.16 (2016-12-05)

    * Added numbering tables by section for html and pdf
      (pandoc-eqnos Issue #15).


pandoc-tablenos 0.15 (2016-11-30)

    * Clickable internal links for docx (pandoc-fignos Issue #25).


pandoc-tablenos 0.14.1 (2016-11-17)

    * Use custom caption name for tagged tables.
    * Python 2.7.3 bug addressed with pandoc-xnos 0.7.
    * Clarified purpose of this filter in README.md (Issue #4).


pandoc-tablenos 0.14 (2016-11-05)

    * Updated for pandoc 1.18 (pandoc-fignos Issue #30)


pandoc-tablenos 0.13 (2016-10-22)

    * Fixed metadata corruption bug (pandoc-fignos Issue #23).
    * Fixed python 2.7 install on Windows (pandoc-fignos Issue #27).
    * Require pandoc-xnos >= 0.5.


pandoc-tablenos 0.12.1 (2016-08-21)

    * Require pandoc-xnos >= 0.4.1.


pandoc-tablenos 0.12 (2016-08-21)

    * Support for unnumbered figures in TeX/pdf.


pandoc-tablenos 0.11 (2016-05-18)

    * Added tagged tables (Issue #3)
    * Changed caption separator from period to colon for html output
      to be consistent with TeX/pdf.
    * Added option to change the caption name.


pandoc-tablenos 0.10 (2016-05-15)
